--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "highlight": "^0.2.4",
     "highlight.js": "^9.13.1",
     "marked": "^0.5.1",
