--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "start": "npm run dev-serve",
         "dev-serve": "vue-cli-service serve",
         "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "build": "vue-cli-service build"
     },
     "dependencies": {
         "babel-runtime": "^6.26.0",
