--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
         "text-loader": "0.0.1",
         "vue-markd-loader": "^1.1.0",
         "vue-markdown-loader": "^2.4.1",
-        "vue-template-compiler": "^2.6.10"
+        "node-sass": "^4.9.0",
+        "raw-loader": "^3.0.0",
+        "sass-loader": "^7.0.1",
+        "style-loader": "^0.23.1",
+        "vue-template-compiler": "^2.5.17"
     },
     "postcss": {
         "plugins": {
