--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "build": "vue-cli-service build"
     },
     "dependencies": {
+        "@aigodata/element-theme": "2.10.0",
         "babel-runtime": "^6.26.0",
         "core-js": "^2.6.5",
         "echarts": "^4.2.1",
